--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.4",
         "nodemon": "^3.0.1",
-        "randomstring": "^1.3.0"
+        "randomstring": "^1.3.0",
+        "stripe": "^14.11.0"
     }
 }
